--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -22,4 +22,10 @@
        3 = right side
   -->
   <integer name="config_fingerprintSensorLocation">1</integer>
+
+  <!-- Device specific doze package -->
+  <string name="config_customDozePackage">com.moto.actions/com.moto.actions.DozePreferenceActivity</string>
+  
+  <!-- Device specific gesture package -->
+  <string name="config_customGesturePackage">com.moto.actions/com.moto.actions.ActionsPreferenceActivity</string>
 </resources>
