athene: MotoSettings: Update
 * Fix pref key
 * Cleanup

Change-Id: I4e1594b80b5fa9981a83c7fdc13de011465df9ef

--- a/MotoSettings/res/xml/thermal.xml
+++ b/MotoSettings/res/xml/thermal.xml
@@ -23,7 +23,7 @@
         android:title="@string/category_thermal_title">
 
         <SwitchPreference
-            android:key="thermal_turbocharging_switch"
+            android:key="thermal_turbocharging"
             android:defaultValue="true"
             android:title="@string/category_thermal_turbocharging_title"
             android:summary="@string/category_thermal_turbocharging_summary" />
