athene: MotoActions: Allow use FP as lock
Change-Id: I764d4a714155b180fbac705d2b704bd8ad870d9d

--- a/MotoActions/res/xml/actions_panel.xml
+++ b/MotoActions/res/xml/actions_panel.xml
@@ -69,6 +69,11 @@
             android:title="@string/fingerprint_wakeup_title"
             android:summary="@string/fingerprint_wakeup_summary" />
 
+        <SwitchPreference
+            android:key="fp_home_sleep"
+            android:title="@string/fingerprint_sleep_title"
+            android:summary="@string/fingerprint_sleep_summary" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
