athene: overlay: Add QPerformance and UxPerformance to pinner service
Signed-off-by: Adarsh-MR <adarshmr1998@gmail.com>
Change-Id: I918d57b57bda6514063693d50ae4fed9e8e58111

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -911,6 +911,8 @@
        <item>"/system/framework/boot.vdex"</item>
        <item>"/system/framework/arm64/boot-core-libart.oat"</item>
        <item>"/system/framework/boot-core-libart.vdex"</item>
+       <item>"/system/framework/boot-QPerformance.vdex"</item>
+       <item>"/system/framework/boot-UxPerformance.vdex"</item>
    </string-array>
 
     <!-- Is the notification LED intrusive? Used to decide if there should be a disable option -->
